[package]
name = "drand-client-rs"
description = "a small Rust library for retrieving random numbers from `drand`"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
bls12_381 = { version = "0.8.0", features = ["experimental"] }
hex = { version = "0.4.3", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.9" 
thiserror = "2"
